log
Thu 28 Sep 2023 07:23:18 PM UTC: 
 tests:  0|4
total_score: 0/70
8e61835
Mon 16 Oct 2023 02:32:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘reserva’ [-Werror=unused-variable]
   36 |   Heap* reserva=(Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3a8d86f
Mon 16 Oct 2023 02:33:20 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|4
total_score: 0/70
0539524
Mon 16 Oct 2023 02:33:55 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3b28c0d
Mon 16 Oct 2023 02:36:02 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
4a0c710
Mon 16 Oct 2023 02:36:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2b70c10
Mon 16 Oct 2023 02:36:22 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
591b12c
Mon 16 Oct 2023 02:46:41 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
2c2d00c
Mon 16 Oct 2023 02:47:28 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:18: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   40 |   nuevo.priority=p;
      |                  ^
      |                  pq
heap.c:40:18: note: each undeclared identifier is reported only once for each function it appears in
heap.c:38:12: error: variable ‘nuevo’ set but not used [-Werror=unused-but-set-variable]
   38 |   heapElem nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a77c04c
Mon 16 Oct 2023 02:48:34 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:18: error: expected ‘;’ before ‘nuevo’
   39 |   nuevo.data=data
      |                  ^
      |                  ;
   40 |   nuevo.priority=p;
      |   ~~~~~           
heap.c:38:12: error: variable ‘nuevo’ set but not used [-Werror=unused-but-set-variable]
   38 |   heapElem nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2adfee1
Mon 16 Oct 2023 02:48:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:18: error: expected ‘;’ before ‘nuevo’
   39 |   nuevo.data=data
      |                  ^
      |                  ;
   40 |   nuevo.priority=p
      |   ~~~~~           
heap.c:38:12: error: variable ‘nuevo’ set but not used [-Werror=unused-but-set-variable]
   38 |   heapElem nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
117bf81
Mon 16 Oct 2023 02:48:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:18: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   40 |   nuevo.priority=p
      |                  ^
      |                  pq
heap.c:40:18: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:19: error: expected ‘;’ before ‘}’ token
   40 |   nuevo.priority=p
      |                   ^
      |                   ;
......
   43 | }
      | ~                  
heap.c:38:12: error: variable ‘nuevo’ set but not used [-Werror=unused-but-set-variable]
   38 |   heapElem nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e220f5d
Mon 16 Oct 2023 02:48:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘nuevo’
   39 |   nuevo.data=data;
      |   ^~~~~
heap.c:39:3: error: ‘nuevo’ undeclared (first use in this function)
heap.c:39:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:18: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   40 |   nuevo.priority=p
      |                  ^
      |                  pq
heap.c:40:19: error: expected ‘;’ before ‘}’ token
   40 |   nuevo.priority=p
      |                   ^
      |                   ;
......
   43 | }
      | ~                  
Compilation failed
3de3e24
